--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,54 @@
-# Windows image file caches
-Thumbs.db
-ehthumbs.db
+# Numerous always-ignore extensions
+*.diff
+*.err
+*.orig
+*.log
+*.rej
+*.swo
+*.swp
+*.vi
+*~
+*.sass-cache
 
-# Folder config file
-Desktop.ini
-
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
-
-# Mac crap
+# OS or Editor folders
 .DS_Store
-
-# Sublime
+Thumbs.db
+.cache
+.project
+.settings
+.tmproj
+*.esproj
+nbproject
 *.sublime-project
 *.sublime-workspace
 
-# PhpStorm
+# Dreamweaver added files
+_notes
+dwsync.xml
+
+# Komodo
+*.komodoproject
+.komodotools
+
+# Folders to ignore
+.hg
+.svn
+.CVS
+intermediate
 .idea
+cache
 
-# Eclipse
-*.pydevproject
-.project
-.metadata
+# Bower, node etc.
+/bower_components
+/node_modules
+composer.phar
+#composer.lock
+package-lock.json
+.env.*.php
+.env.php
+
+# project
 build/
-tmp/
-tests/clover.xml
-
-# Grunt
-node_modules
-
-# Temporary files
-*~
-
-# Other
 deploy.sh
+vendor/
+!includes/vendor/
